# big-O

./: Cargo.toml  PLANNING.md  README.md  publish
.github/workflows/: rust.yml
src/: analysis.rs  big-o.rs  big_o.rs  big_o_analysis.rs  conditionals.rs  configs.rs  crud_analysis.rs  features.rs  lib.rs  low_level_analysis.rs  metrics_allocator.rs  ring_buffer.rs
src/analysis/: mod.rs  types.rs
src/api/: builder.rs  mod.rs  types.rs
src/api/builders/: crud_async_builder.rs  dynamic_async_builder.rs  mod.rs  regular_async_builder.rs
src/big_o_analysis/: space_analysis.rs  time_analysis.rs  types.rs
src/low_level_analysis/: configs.rs  low_level_analysis.rs  mod.rs  space_analysis.rs  time_analysis.rs  types.rs
src/low_level_analysis/types/: mod.rs  types.rs  types_impl.rs
src/metrics_allocator/: metrics_allocator.rs  mod.rs  ring_buffer.rs
src/runners/: common.rs  crud.rs  mod.rs  standard.rs
src/utils/: measurements.rs  mod.rs
src/utils/measurements/: measurer.rs  mod.rs  presentable_measurements.rs
tests/: big_o_tests.rs  std_containers.rs
